[metadata]
name = pyWBE
version = 0.0.6
description = An open-source Wastewater-based Epidemiology Library in Python
long_description = file: README.md, CHANGELOG.txt
long_description_content_type = text/markdown
url = https://github.com/illinoisdpi/pywbe
author = Anuj Tiwari
author_email = anujt@uic.edu
license = MIT
license_file = LICENSE
platforms = win32
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education

[options]
packages = 
    pyWBE
install_requires = 
    numpy>=1.20
python_requires = 
    >=3.9
package_dir = 
    =src
zip_safe =
    no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    numpy>=1.26
    pandas>=2.1
    matplotlib>=3.7

[options.package_data]
pyWBE = py.typed
my_package = first_submodule/*

[flake8]
max-line-length = 160